# uvms_dynamics_ros2_control

./: .gitignore  CMakeLists.txt  README.md  package.xml  uvms_plugin.xml
doc/: userdoc.rst
include/uvms_controller/: dynamics.hpp  dynamics_params.template.hpp  so_loader.hpp  uvms_base.hpp  uvms_controller.hpp  uvms_interface.hpp  visibility_control.h
src/: dynamics.cpp  so_loader.cpp  uvms_base.cpp  uvms_controller.cpp  uvms_controller_parameters.yaml  uvms_parameters.yaml
